# clarity

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cliff.toml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-and-docs.yml  ci.yml  main.yml
docs/: Makefile  changelog.rst  components.rst  conf.py  configuration.rst  dark-light-modes.rst  getting-started.rst  index.rst  requirements.txt
docs/source/: changelog.rst  chatbot.rst  color-system.rst  components.rst  conf.py  configuration.rst  consent.rst  dark-light-modes.rst  getting-started.rst  index.rst  maintainer-workflow.rst  navigation-and-controls.rst  privacy.rst  typography.rst
docs/source/audit/: 2026-04-14-docs.rst  2026-04-14.rst  2026-04-16-code-review.rst  bugs.rst  code-review.rst  documentation.rst  index.rst  refactoring-proposal.rst  security.rst
docs/source/plans/: chatbot-digest-ingest.[COMPLETED ✓].md  clarity-v1-5-0.[ACTIVE ▸].md  clarity-v1-5-0.[COMPLETED ✓].md  conditional-pypi-publish.[COMPLETED ✓].md  enhanced-search-results.[COMPLETED ✓].md  enhanced-search-results.[DRAFT ○].md  granular-privacy-and-ttl.[COMPLETED ✓].md  granular-privacy-and-ttl.[DRAFT ○].md  index.rst  indexeddb-chatbot-storage.[DRAFT ○].md  issue-templates-tailoring.[COMPLETED ✓].md  shared-request-counter.[DRAFT ○].md  skins-system.[COMPLETED ✓].md  source-in-docs.[DRAFT ○].md
src/clarity/: __init__.py  chatbot.html  consent.html  layout.html  notfound.html  privacy-panel.html  pygments_styles.py  sidebar.html  theme-toggle.html  theme.conf
src/clarity/static/css/: chatbot.css  clarity.css  code-blocks.css  components.css  consent.css  copybutton.css  mermaid.css  privacy-panel.css  responsive.css  search-results.css
src/clarity/static/js/: chatbot-api.js  (+16 more)
(+6 files in other folders)
